# Qsolve

./: .gitignore  CHANGELOG.md  GPU_SUPPORT.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
Qsolve/: Core.py  Solvers.py  __init__.py  cli.py  evolution.py  gpu.py  gpu_unified.py  potentials.py  two_electron.py  visualisation.py
Qsolve/solvers/: __init__.py  davidson.py
benchmarks/: benchmark_davidson.py
docs/: Makefile
docs/source/: api.rst  conf.py  index.rst
docs/source/tutorials/: basic_usage.ipynb  time_evolution.ipynb
examples/: 2d_harmonic_oscillator.ipynb  2d_time_evolution.ipynb  examples.py
src/qsolve/: __init__.py  evolution.py  solvers_main.py  two_electron.py  visualisation.py
src/qsolve/solvers/: davidson.py
tests/: test_comprehensive.py  test_core.py  test_davidson.py  test_gpu_sparse.py  test_integration.py  test_potentials.py  test_two_electron.py
