[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Qsolve"
version = "0.1.0"
description = "A modern quantum mechanics library"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Josh Fleming", email = "joshyfleming15@icloud.com"},
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
    "ipython",
]
fast = [
    "numba>=0.57.0",
    "jax[cpu]>=0.4.0",
]
gpu = [
    "cupy-cuda12x>=12.0.0",
    "jax[cuda12_pip]>=0.4.0",
]
metal = [
    "mlx>=0.5.0",
    "jax-metal",
]
gpu-all = [
    "Qsolve[gpu,metal]",
]
viz = [
    "plotly>=5.0",
    "ipywidgets",
    "notebook",
]
docs = [
    "Sphinx",
    "nbsphinx",
]
all = [
    "Qsolve[dev,fast,gpu,viz,docs]",
]

[project.scripts]
qsolve-cli = "Qsolve.cli:main"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=Qsolve --cov-report=html"
