[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qsolve"
version = "0.1.0"
description = "High-performance quantum mechanics library with GPU acceleration"
readme = "README.md"
authors = [{name = "Josh Fleming", email = "joshyfleming15@icloud.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["quantum", "physics", "eigenvalue", "davidson", "gpu", "simulation"]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "matplotlib>=3.3",
]
requires-python = ">=3.9"

[project.optional-dependencies]
gpu = ["cupy-cuda12x"]
jax = ["jax[cuda12_pip]"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=5.0",
    "mypy>=0.990",
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
    "nbsphinx>=0.8",
    "jupyter>=1.0",
]

[project.urls]
Homepage = "https://github.com/jofl1/Qsolve"
Documentation = "https://qsolve.readthedocs.io"
Repository = "https://github.com/jofl1/Qsolve"
Issues = "https://github.com/jofl1/Qsolve/issues"

[project.scripts]
qsolve = "qsolve.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
addopts = "--cov=qsolve --cov-report=html --cov-report=term-missing"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true